prodMetadata/src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Average_Customer_Service_Rating__c</fullName>
        <formula>Sum_of_Customer_Service_Rating__c  /  Count_of_Rated_Referrals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Customer Service Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Effectiveness_Rating__c</fullName>
        <formula>Sum_of_Effectiveness__c  /  Count_of_Rated_Referrals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Effectiveness Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Overall_Rating__c</fullName>
        <formula>(Average_Customer_Service_Rating__c  +  Average_Effectiveness_Rating__c  +  Average_Quality_Rating__c  +  Average_Timeliness_Rating__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Overall Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Quality_Rating__c</fullName>
        <formula>Sum_of_Quality_Rating__c  /  Count_of_Rated_Referrals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Quality Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Timeliness_Rating__c</fullName>
        <formula>Sum_of_Timeliness_Rating__c  /  Count_of_Rated_Referrals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Timeliness Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_of_Master_Ratings__c</fullName>
        <formula>Sum_of_Master_Ratings__c / Count_of_Total_Referrals__c</formula>
        <label>Average of Master Ratings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_in_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Best in Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Rated_Referrals__c</fullName>
        <label>Count of Rated Referrals</label>
        <summaryFilterItems>
            <field>Referral__c.Quality__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Total_Referrals__c</fullName>
        <description>Count of all referrals with a master rating</description>
        <label>Count of Total Referrals</label>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_More_Than_30_Referrals__c</fullName>
        <description>For StepUp</description>
        <formula>Number_of_Referrals_Created__c &gt;30</formula>
        <label>Created More than 30 Referrals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emailed_Description__c</fullName>
        <label>Emailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Intake_Instructions__c</fullName>
        <label>External Intake Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Five_Star_Service_Provider__c</fullName>
        <description>For StepUp</description>
        <formula>AND(Created_More_Than_30_Referrals__c=TRUE,Last_Referral_Date__c&gt;TODAY()-365)</formula>
        <label>Five Star Service Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Focus Area</label>
        <referenceTo>Focus_Area__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funder_s__c</fullName>
        <label>Funder(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Robin Hood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HEEC__c</fullName>
        <label>HEEC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Intake_Instructions__c</fullName>
        <label>Internal Intake Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Referral_Date__c</fullName>
        <description>For StepUp</description>
        <label>Last Referral Date</label>
        <summarizedField>Referral__c.Date_of_Referral__c</summarizedField>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MOU_Terms__c</fullName>
        <label>MOU Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MOU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Referrals_Created__c</fullName>
        <description>For StepUp</description>
        <label>Number of Benefits Received Referrals</label>
        <summaryFilterItems>
            <field>Referral__c.Benefit_Received__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <formula>CASESAFEID(Organization__r.Id)</formula>
        <label>Organization Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the organization that manages and runs the program.</description>
        <inlineHelpText>This is the organization that manages and runs the program.</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_City__c</fullName>
        <label>Program City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_State__c</fullName>
        <label>Program State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Street_Address__c</fullName>
        <label>Program Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Zip__c</fullName>
        <label>Program Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Description__c</fullName>
        <label>Public Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Complete_Y_N__c</fullName>
        <label>Site Visit Complete (Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Customer_Service_Rating__c</fullName>
        <label>Sum of Customer Service Rating</label>
        <summarizedField>Referral__c.Customer_Service__c</summarizedField>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Effectiveness__c</fullName>
        <label>Sum of Effectiveness Rating</label>
        <summarizedField>Referral__c.Effectiveness__c</summarizedField>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Master_Ratings__c</fullName>
        <label>Sum of Master Ratings</label>
        <summarizedField>Referral__c.Master_Rating__c</summarizedField>
        <summaryFilterItems>
            <field>Referral__c.Master_Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Quality_Rating__c</fullName>
        <label>Sum of Quality Rating</label>
        <summarizedField>Referral__c.Quality__c</summarizedField>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Timeliness_Rating__c</fullName>
        <label>Sum of Timeliness Rating</label>
        <summarizedField>Referral__c.Timeliness__c</summarizedField>
        <summaryForeignKey>Referral__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Suppress_Emails_for_Program_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When programs are merged, the referral survey email is getting triggered and sent to all the clients again. This is confusing and this checkbox is being added to the workflow criteria to prevent that from firing.</description>
        <inlineHelpText>Check this box if you are going to merge the program with a duplicate program so, clients don&apos;t get confusing referral survey emails.</inlineHelpText>
        <label>Suppress Emails for Program Merge</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All_Programs</fullName>
        <columns>NAME</columns>
        <columns>Focus_Area__c</columns>
        <columns>Program_State__c</columns>
        <columns>Description__c</columns>
        <columns>Best_in_Class__c</columns>
        <columns>Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
    </listViews>
    <listViews>
        <fullName>Case_Management_Programs</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Organization__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Nicole Venutolo</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Allison Chansky</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Ryan Weemer</value>
        </filters>
        <label>Case Management Programs</label>
    </listViews>
    <listViews>
        <fullName>Community_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Community</value>
        </filters>
        <label>Community Programs</label>
    </listViews>
    <listViews>
        <fullName>Disability_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <columns>Focus_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>contains</operation>
            <value>Disability</value>
        </filters>
        <label>Disability Programs</label>
    </listViews>
    <listViews>
        <fullName>Education_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <columns>Public_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Education</value>
        </filters>
        <label>Education Programs</label>
    </listViews>
    <listViews>
        <fullName>Employment_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Employment</value>
        </filters>
        <label>Employment Programs</label>
    </listViews>
    <listViews>
        <fullName>Financial_Assistance_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Internal_Intake_Instructions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Financial Assistance</value>
        </filters>
        <label>Financial Assistance Organizations</label>
    </listViews>
    <listViews>
        <fullName>Financial_Assistance_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Financial Assistance</value>
        </filters>
        <label>Financial Assistance Programs</label>
    </listViews>
    <listViews>
        <fullName>Health_Care_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Health Care</value>
        </filters>
        <label>Health Care Programs</label>
    </listViews>
    <listViews>
        <fullName>Homelessness_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Homelessness</value>
        </filters>
        <label>Homelessness Programs</label>
    </listViews>
    <listViews>
        <fullName>Housing_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Housing</value>
        </filters>
        <label>Housing Programs</label>
    </listViews>
    <listViews>
        <fullName>IAVA_Programs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization__c</field>
            <operation>startsWith</operation>
            <value>Iraq</value>
        </filters>
        <label>IAVA Programs</label>
    </listViews>
    <listViews>
        <fullName>Legal_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <columns>Description__c</columns>
        <columns>Public_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Legal</value>
        </filters>
        <label>Legal Programs</label>
    </listViews>
    <listViews>
        <fullName>Military_Families_Programs</fullName>
        <columns>NAME</columns>
        <columns>Program_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Military Families</value>
        </filters>
        <label>Military Families Programs</label>
    </listViews>
    <listViews>
        <fullName>My_Programs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Focus_Area__c</columns>
        <columns>Funder_s__c</columns>
        <columns>Primary_POC__c</columns>
        <columns>Organization__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>